Added local normalization parameter

--- a/hyperparameters.attardi07_english_ptb.yaml
+++ b/hyperparameters.attardi07_english_ptb.yaml
@@ -9,6 +9,8 @@ learning rate: 0.1
 examples per validation: 100000
 minimum training updates: 2500000
 
+locally normalize: True
+
 #validation examples file: data/english_ptb_train.validation.shuffled.50.feats
 #examples per validation: 1000
 #minimum training updates: 2500
