--- a/hyperparameters.attardi07_english_ptb.yaml
+++ b/hyperparameters.attardi07_english_ptb.yaml
@@ -1,6 +1,7 @@
-original examples file: ../data/20090923/english_ptb_train.feats
-train examples file: ../data/20090923/english_ptb_train.train.feats
-validation examples file: ../data/20090923/english_ptb_train.validation.feats
+original examples file: ../data/r235/embeddings-20090923-rcv1.unclean.CoNLL03-tokenize.case-intact.LEARNING_RATE=0_0000000001_--EMBEDDING_LEARNING_RATE=0_0000032.model-440000000/english_ptb_train.feats.gz
+#train examples file: ../data/r235/embeddings-20090923-rcv1.unclean.CoNLL03-tokenize.case-intact.LEARNING_RATE=0_0000000001_--EMBEDDING_LEARNING_RATE=0_0000032.model-440000000/english_ptb_train.train.feats.gz
+train examples file: ../data/r235/embeddings-20090923-rcv1.unclean.CoNLL03-tokenize.case-intact.LEARNING_RATE=0_0000000001_--EMBEDDING_LEARNING_RATE=0_0000032.model-440000000/english_ptb_train.validation.feats.gz
+validation examples file: ../data/r235/embeddings-20090923-rcv1.unclean.CoNLL03-tokenize.case-intact.LEARNING_RATE=0_0000000001_--EMBEDDING_LEARNING_RATE=0_0000032.model-440000000/english_ptb_train.validation.feats.gz
 
 # When a feature value is given, divide it by this value. (All other
 # features, the ones without values given, will have value 1.)
